# network-discovery

./: Cargo.toml  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: build-document.yaml  test.yaml
manager/: Cargo.toml  all.html  constant.BROADCAST_ADDRESS.html  fn.main.html  index.html  sidebar-items.js
manager/commands/: enum.DiscoveryCommand.html  index.html
manager/network/: fn.search_networks.html  index.html  sidebar-items.js
manager/servers/: index.html  sidebar-items.js
manager/shared_data/: index.html  sidebar-items.js  struct.DataEvent.html  struct.SharedData.html
manager/src/: commands.rs  main.rs  network.rs  servers.rs  shared_data.rs
manager/store/: index.html  sidebar-items.js
manager/threads/: index.html
native/: package.json  pnpm-lock.yaml
native/src-tauri/: Cargo.toml  tauri.conf.json
network_discovery_native/: all.html  fn.main.html  index.html
network_discovery_native_lib/: all.html  fn.greet.html  fn.run.html  index.html  sidebar-items.js
node/: Cargo.toml  all.html  fn.main.html  index.html
node/src/: main.rs
search.desc/manager/: manager-desc-0-.js
search.desc/network_discovery_native/: network_discovery_native-desc-0-.js
search.desc/network_discovery_native_lib/: network_discovery_native_lib-desc-0-.js
search.desc/node/: node-desc-0-.js
shared/: Cargo.toml  all.html  fn.add.html  index.html  sidebar-items.js
src/: lib.rs  scan.rs
web_server/: Cargo.toml  all.html  fn.get_node.html  fn.main.html  fn.node_overview.html  index.html  sidebar-items.js  struct.AppState.html
(+169 files in other folders)
