[workspace]
members = [
    "manager",
    "node",
    "shared"
]

[workspace.dependencies]
serde = { version = "1.0.141", features = ["derive"] }
serde_json = { version = "1.0.141" }
tokio = { version = "1.43", features = ["net"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
